# OCaml-regexp

./: .gitignore  Makefile  README.md  RExp.opam  dune  dune-project  engine.ml  mylist.ml  rege.ml  regularExpression.ml  regular_expressions.ml
examples/: calculator.ml  dune
lib/: dune  engine.ml  engine.mli  mylist.ml  regE.ml  regE.mli  rege.ml  utils.ml  utils.mli
test/: dune  tests.ml
